# asimov_box

./: .gitignore  ARCHITECTURE_OVERVIEW.md  BENCHMARK_STATUS_SUMMARY.md  CODEBASE_ANALYSIS.md  EXECUTIVE_SUMMARY.md  EXPLORATION_SUMMARY.txt  INTEGRATION_GAPS_ANALYSIS.md  METHODS_AND_RESULTS.md  PROPOSED_REPO_STRUCTURE.md  READ_ME_FIRST.md  ROBOGUARD_BENCHMARK_ISSUE_ANALYSIS.md  asimov_box_gridworld_1.py  asimov_box_gridworld_2.py  asimov_box_gridworld_sensitive.py  final_report_1.tex  toy_knife_example.py  toy_knife_gridworld_3.py  toy_knife_gridworld_4.py  toy_knife_gridworld_dqn.py
.git_backup/: COMMIT_EDITMSG  config  index  packed-refs
KnowDanger/: BASELINE_TESTING_GUIDE.md  KnowDanger_tree_Nov  NAVIGATION_TESTS_GUIDE.md  PRINCETON_API_SETUP.md  README.md  ROBOGUARD_COMPARISON.md  batch_run_roboguard_behaviors.py  compare_roboguard_results.py  diagnose_roboguard.py  diagnose_roboguard_actions.py  environment.yml  environment_spot.yml  knowdanger_core.py  knowdanger_core_old.py  knowdanger_rewriting.py  knowdanger_vs_baselines.py  legal_guarddog_paper_sections.md  llm_scorer_benchmark.py  logprob_gaps.csv  openai_compat.py  plot_logprobs.py  princeton_api.py  pyproject.toml  rg_adapter.py  roboguard_action_patch.py  (+19 more)
KnowDanger/SPINE/ros/spine_ros/: package.xml  setup.py
KnowDanger/SPINE/ros/spine_ros/launch/: planner.launch
KnowDanger/SPINE/ros/spine_ros/scripts/: graph_nav_node.py  graph_service.py  spine_node.py  viz_graph.py
KnowDanger/SPINE/ros/spine_ros/src/spine_ros/: imu_reader.py
KnowDanger/SPINE/ros/spine_ros/srv/: AddNode.srv  Graph.srv  Task.srv
(+407 files in other folders)
