<?xml version="1.0"?>
<package format="2">
  <name>spine_ros</name>
  <version>0.0.0</version>
  <description>The spine ros package</description>
  <maintainer email="zac@seas.upenn.edu">zac</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
